--- a/.gitignore
+++ b/.gitignore
@@ -97,7 +97,7 @@ dist
 
 # Gatsby files
 .cache/
-public
+# public (commented out for React - we need public/index.html)
 
 # Storybook build outputs
 .out
